--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,23 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# R source file
+*.r linguist-detectable=true
+*.r linguist-documentation=false
+*.r linguist-language=R
+*.rdata linguist-detectable=true
+*.rdata linguist-documentation=false
+*.rdata linguist-language=R
+*.rda linguist-detectable=true
+*.rda linguist-documentation=false
+*.rda linguist-language=R
+*.rds linguist-detectable=true
+*.rds linguist-documentation=false
+*.rds linguist-language=R
+# RMarkdown source file
+*.Rmd linguist-detectable=true
+*.Rmd linguist-documentation=false
+*.Rmd linguist-language=RMarkdown
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -161,10 +178,13 @@
 *.gif linguist-detectable=false
 *.gif linguist-documentation=false
 *.gif linguist-language=GIF
+
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2023, Saturday, February 25th at 2:28 pm PST)
+# Line count (including blank lines and compiler line): 191
+
 # End of script
